# vericoding-benchmark

./: README.md  vericoding_benchmark_v1.csv
hf/: .gitignore  README.md  pyproject.toml
hf/artifacts/: README.md
hf/solutions/LD0463/: Solution.lean
hf/solutions/LF2653/: Solution.lean
hf/solutions/LT0471/: Solution.lean
hf/src/: hf.sh
hf/src/vchf/: __init__.py  solve.py
jsonl/: dafny_issues.jsonl  lean_issues.jsonl  verus_issues.jsonl  verus_tasks.jsonl
just_LB0052/: JustLB0052.lean  lake-manifest.json  lakefile.lean
specs/: LA0000_specs.lean  LA0001_specs.lean  LA0002_specs.lean  LA0003_specs.lean  LA0004_specs.lean  LA0005_specs.lean  LA0006_specs.lean  LA0007_specs.lean  LA0008_specs.lean  LA0009_specs.lean  LA0010_specs.lean  LA0011_specs.lean  LA0012_specs.lean  LA0013_specs.lean  LA0014_specs.lean  LA0015_specs.lean  LA0016_specs.lean  LA0017_specs.lean  LA0018_specs.lean  LA0019_specs.lean  LA0020_specs.lean  LA0021_specs.lean  LA0022_specs.lean  LA0023_specs.lean  LA0024_specs.lean  LA0025_specs.lean  LA0026_specs.lean  LA0027_specs.lean  LA0028_specs.lean  LA0029_specs.lean  LA0030_specs.lean  LA0031_specs.lean  LA0032_specs.lean  LA0033_specs.lean  LA0034_specs.lean  LA0035_specs.lean  LA0036_specs.lean  LA0037_specs.lean  LA0038_specs.lean  LA0039_specs.lean  (+9414 more)
vericoded/: DA0000_vericoded.dfy  DA0001_vericoded.dfy  DA0002_vericoded.dfy  DA0003_vericoded.dfy  DA0004_vericoded.dfy  DA0005_vericoded.dfy  DA0007_vericoded.dfy  DA0008_vericoded.dfy  DA0009_vericoded.dfy  DA0010_vericoded.dfy  DA0012_vericoded.dfy  DA0013_vericoded.dfy  (+3324 more)
