[project]
name = "vchf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Quinn Dougherty", email = "quinn.dougherty.forall@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "huggingface-hub[cli]>=0.35.3",
    "jsonlines>=4.0.0",
    "pydantic>=2.12.3",
    "pydantic-ai>=1.2.1",
    "python-dotenv>=1.1.1",
    "typer>=0.20.0",
]

[project.scripts]
concat-jsonl = "vchf:main"
solve-lean = "vchf.solve:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
